Thu Dec  2 19:58:24 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* vm.c (ruby_vm_at_exit): new API.  This enables extension libs to
	  hook a VM termination.  Right now, because the VM we have is
	  process global, most extensions do not deallocate resources and
	  leave them to Operating System's reaping userland processes.  But
	  in a future we plan to have multiple VMs to run simultaneously in
	  a single process (MVM project).  At that stage we can no longer
	  rely on OSes and have to manage every resources to be reclaimed
	  properly.  So it is.  For a forward-compatibility reason this API
	  is introduced now, encouraging you to be as gentle as you can for
	  your resources; that is, tidy up your room.

	* include/ruby/vm.h: ditto.

	* vm_core.h (rb_vm_struct): new field.

	* vm.c (vm_init2): initialize above new field.

	* eval.c (ruby_cleanup): trigger those hooks.

Thu Dec  2 17:00:44 2010  Tanaka Akira  <akr@fsij.org>

	* bignum.c: parenthesize macro arguments.

Thu Dec  2 15:31:14 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): more fix. [ruby-core:33513]

Thu Dec  2 13:41:43 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): workaround for console reading troubles.
	  fixed [ruby-core:33511]

Thu Dec  2 13:10:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI.encode_www_form):
	  split key-value when the value is Array like object.

Thu Dec  2 10:39:39 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http.rb (Net::HTTP#set_form_data):
	  use URI.encode_www_form for application/x-www-form-urlencoded.

Thu Dec  2 10:38:40 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/extmk.rb: remove $makeflags.defined?, it should be $mflags.

Thu Dec  2 10:19:47 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (rc): suppress meaningless message.

Thu Dec  2 10:09:40 2010  NARUSE, Yui  <naruse@ruby-lang.org>
